--- a/templates/greet.html
+++ b/templates/greet.html
@@ -1,7 +1,11 @@
-<!doctype html>
-<title>Hello from Flask</title>
-{% if name %}
-  <h1>Hello {{ name }}!</h1>
-{% else %}
-  <h1>Didn't specify a name</h1>
-{% endif %}
+{% extends "base.html" %}
+{% block head %}
+<title>Greetings from Flask</title>
+{% endblock %}
+{% block content %}
+    {% if name %}
+      <h1>Hello {{ name }}!</h1>
+    {% else %}
+      <h1>Didn't specify a name</h1>
+    {% endif %}
+{% endblock %}
