--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
-<!doctype html>
+{% extends "base.html" %}
+{% block head %}
 <title>Hello from Flask</title>
+{% endblock %}
 {% if name %}
   <h1>Hello {{ name }}!</h1>
 {% else %}
